feat: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,36 @@
 test.sh
 .checker_linux
 .checker_macos
+megaphone
+PhoneBook
+BraiiiiiiinnnzzzZ
+ZombieHorde
+Brain
+Violence
+Replace
+Harl
+Fixed00
+Fixed01
+Fixed02
+ClapTrap
+ScavTrap
+FragTrap
+cats_n_dogs00
+cats_n_dogs01
+cats_n_dogs02
+Bureaucrat
+Convert
+Serializer
+Identify
+templates
+iter
+Array
+easyfind
+Span
+MutantStack
+btc
+RPN
+PmergeMe
 
 # Prerequisites
 *.d
